--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> ifra2109d01@aptechgdn.net 
+        <i class="bi bi-envelope"></i> sajith2109d01@aptechgdn.net 
         <i class="bi bi-phone"></i> +92 319 6726665
       </div>
       <div class="d-none d-lg-flex social-links align-items-center">
@@ -800,13 +800,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Sector 9, Saeedabad, Baldia Town, Karachi</p>
+                <p>27/12, 5g, Saeedabad, Baldia Town, Karachi</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>ifra2109d01@aptechgdn.net</p>
+                <p>sajith2109d01@aptechgdn.net</p>
               </div>
 
               <div class="phone">
@@ -863,11 +863,11 @@
           <div class="col-lg-6 col-md-6 footer-contact">
             <h3>Medilab</h3>
             <p>
-              Sector-9 <br>
+              27/12, 5g <br>
               Saeedabad , Baldia Town<br>
               Karachi <br><br>
               <strong>Phone:</strong> +92 319 6726665<br>
-              <strong>Email:</strong> ifra2109d01@aptechgdn.net<br>
+              <strong>Email:</strong> sajith2109d01@aptechgdn.net<br>
             </p>
           </div>
 
@@ -899,7 +899,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/ -->
-          Designed by Ifra M Hashim
+          Designed by <a href="https://sajith2109d01.github.io/sajidportfolio/">Muhammad Sajith</a>
         </div>
       </div>
       
